# Dataselector-public

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  README_EN.md  environment.yml  pyproject.toml  pytest.ini  requirements-cpu.txt  requirements-geo.txt  requirements-optional.txt  requirements.txt  setup.cfg
config/: parameter_resolution_contract.yaml  pipeline_config.best_trial_70.yaml  pipeline_config.bootstrap.yaml  pipeline_config.yaml  spatial_split_policy.yaml  tile_exclusion_policy.yaml
dataselector/: __init__.py  __init__.py.backup  __main__.py  cli.py  cli_decorators.py  cli_old_backup.py  compat.py
scripts/: ENV_README.md  __init__.py  align_audit.py  analyze_bootstrap_convergence.py  analyze_dataset.py  analyze_optuna_convergence.py  analyze_sweep_feasibility.py  apply_bootstrap_best.py  apply_optuna_best.py  archive_workspace.py  auto_fix_env_usage.py  bench_full_pipeline.sh  benchmark_sampling_methods.py  benchmark_speed.py  bootstrap_final_selection.py  bootstrap_pareto_candidates.py  build_new_all_tiles.py  check_branch_supersets.sh  check_dependency_pins.py  check_docs_cli_drift.py  check_env.py  check_env_usage.py  check_experiment_status.sh  check_geo_env.py  check_protected.py  clean_workspace.py  cleanup_workspace.sh  collect_test_metrics.py  common.py  compare_distance_methods.py  compare_feature_backbones.py  compare_methods.py  compare_min_distance_policies.py  compare_samplers.py  compare_samplers_multi_seed.py  compare_samplers_multi_seed_origin.py  compare_samplers_on_kdr100.py  compare_seed_vs_unseed.py  compat_symlinks.py  copy_selection_tiles.py  (+85 more)
tests/: INTEGRATION_TESTS.md  __init__.py  _numba_debug_plugin.py  conftest.py  test_adaptive_auto.py  test_adaptive_pipeline.py  test_analyze_sweep_feasibility.py  test_annotation_plan.py  test_apply_bootstrap_best.py  test_compat.py  (+128 more)
(+289 files in other folders)
