[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 88

# Tests intentionally import local scripts and manipulate sys.path; ignore
# E402 (module level import not at top) there.
per-file-ignores = { "tests/*" = ["E402"] }

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
