[metadata]
name = dataselector
version = 0.1.0
description = KDR100 Datenselektion
license = MIT
author = KDR100 Team

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
# Find both src/ and dataselector/ packages
# src/ is legacy, dataselector/ is new stable API
include = 
    dataselector*
    src*

[options.entry_points]
console_scripts =
    dataselector = dataselector.__main__:main
